syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/isucon10-portal/proto/services/registration";

message CreateTeamRequest {
  string name = 1;
  string email_address = 2;
  bool is_student = 3;
}

message CreateTeamResponse {
  int64 team_id = 1;
}

