syntax = "proto3";
package isuxportal.proto.services.registration;
option go_package = "github.com/isucon/isucon10-portal/proto/services/registraiton";

import "isuxportal/resources/team.proto";

message GetRegistrationSessionRequest {
  string invite_token = 1;
}

message GetRegistrationSessionResponse {
  isuxportal.proto.resources.Team team = 1;
  bool ready = 2;
  string github_login = 3;
  string discord_tag = 4;
}

