syntax = "proto3";
package isucon10_portal.proto.resources;
option go_package = "github.com/isucon/isucon10-portal/proto/resources";

import "resources/contestant.proto";

message Team {
  int64 id = 1;
  string name = 2;
  int64 leader_id = 3;
  repeated member_ids = 4;
  bool final_participation = 5;

  message TeamDetail {
    string email_address = 1;
    int64 benchmark_target_id = 2;

    string invite_token = 16;
  }
  TeamDetail detail = 6;

  Contestant leader = 16;
  repeated Contestant members = 17;
}
